k8s/students/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
spec:
  selector:
    app: httpbin
  ports:
  - name: http
    port: 80
    targetPort: 80
